--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -48,15 +48,18 @@ spec:
           - secretName: "{{ .Release.Name }}-tls"
             hosts:
               - "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
+    securityContext:
+      # -- (bool) Privileged securityContext may be required if USB devices are accessed directly through the host machine
+      privileged: false
     persistence:
       config:
         enabled: true
         existingClaim: code-zwavejs2mqtt-pv-claim
     additionalVolumeMounts:
-      - name: husbzb-zwave
+      - name: usb
         mountPath: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_71500DDD-if00-port0
     additionalVolumes:
-      - name: husbzb-zwave
+      - name: usb
         hostPath:
           path: /dev/zwave
     affinity:
