--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -55,13 +55,11 @@ spec:
       config:
         enabled: true
         existingClaim: code-zwavejs2mqtt-pv-claim
-    additionalVolumeMounts:
-      - name: usb
-        mountPath: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_71500DDD-if00-port0
-    additionalVolumes:
-      - name: usb
-        hostPath:
-          path: /dev/zwave
+      usb:
+        enabled: true
+        type: hostPath
+        hostPath: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_71500DDD-if00-port0
+        hostPathType: CharDevice
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
