--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
               - "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
 
     persistence:
-      config:
+      data:
         enabled: true
         existingClaim: code-zigbee2mqtt-pv-claim
 
