--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -53,14 +53,11 @@ spec:
       data:
         enabled: true
         existingClaim: code-zigbee2mqtt-pv-claim
-
-    additionalVolumeMounts:
-      - name: husbzb-zigbee
-        mountPath: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_71500DDD-if01-port0
-    additionalVolumes:
-      - name: husbzb-zigbee
-        hostPath:
-          path: /dev/zigbee
+      usb:
+        enabled: true
+        type: hostPath
+        hostPath: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_71500DDD-if01-port0
+        hostPathType: CharDevice
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
