--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
             hosts:
               - "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
     persistence:
-      data:
+      config:
         enabled: true
         existingClaim: code-zwavejs2mqtt-pv-claim
       usb:
@@ -99,5 +99,5 @@ spec:
               hosts:
                 - "{{ .Release.Name }}-code.${CLUSTER_DOMAIN}"
         volumeMounts:
-          - name: data
-            mountPath: /data
+          - name: config
+            mountPath: /config
