--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -66,6 +66,8 @@ spec:
                   operator: In
                   values:
                     - "true"
+    securityContext:
+      privileged: true
     addons:
       codeserver:
         enabled: true
