--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -67,6 +67,8 @@ spec:
                   operator: In
                   values:
                     - "true"
+    securityContext:
+      privileged: true
     addons:
       codeserver:
         enabled: true
