--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -103,5 +103,5 @@ spec:
               hosts:
                 - "{{ .Release.Name }}-code.${CLUSTER_DOMAIN}"
         volumeMounts:
-          - name: data
+          - name: config
             mountPath: /data
