--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -34,8 +34,8 @@ spec:
         enabled: true
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-          # external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
-          # external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
+          external-dns/is-public: "true"
           hajimari.io/enable: "true"
           hajimari.io/icon: home-lightbulb
           kubernetes.io/ingress.class: traefik
