reconfigure appdaemon hass url

--- a/cluster/apps/home/appdaemon/helm-release.yaml
+++ b/cluster/apps/home/appdaemon/helm-release.yaml
@@ -32,6 +32,7 @@ spec:
     env:
       TZ: ${TZ}
       DASH_URL: "http://$HOSTNAME:5050"
+      HA_URL: http://home-assistant:8123
 
     ingress:
       main:
