--- a/cluster/apps/home/unifi/helm-release.yaml
+++ b/cluster/apps/home/unifi/helm-release.yaml
@@ -58,6 +58,9 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
+                  port: portal-https
         tls:
           - secretName: "{{ .Release.Name }}-inform-tls"
             hosts:
