--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -8,6 +8,8 @@ stringData:
     CLUSTER_DOMAIN: ENC[AES256_GCM,data:TJFhTIHTjMggz4RIeyQ=,iv:r9CQmH9UkDCc6FPDarrPNtD8Ao80U2AQcXrvPh8I5Z4=,tag:3k63J0OfSauqI3Gnq9DssQ==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:7D82csWXp23VHwICrU1jfiL99sRzcQ==,iv:9mCit3FG+ScmM5PFQD2I2F1SAwRyld2gCA1212K/lKk=,tag:TVyPz50+ANoaRO/n+ytt2g==,type:str]
     FS_GROUP: ENC[AES256_GCM,data:qBu6XtI=,iv:hJr+vmBfVkJKI60VVlnASQETO0J2aMpuMJJ6ku84S58=,tag:cFhF3ulhB3LA4xfG3kqoZw==,type:str]
+    MINIO_ACCESS_KEY: ENC[AES256_GCM,data:NQT+ymsFy7AHEZuFnT8bWQ==,iv:64MGLhKqRFUU8rlEQM3Z00UmgRqxibBh0PzXPB/10dE=,tag:LA3+dkszDwI8nGtlZyE2GQ==,type:str]
+    MINIO_SECRET_KEY: ENC[AES256_GCM,data:0LGKkMDFRO3uv6dWjvOga7ve+VGp3jTCk3Z5pFXX56Punx62YWAqwA==,iv:OcriJ7yDyAqHrgrv3+XdAxoT2Ze5ypb8/TJgO4pWXqo=,tag:WbEon+3bM3IpXBSc4cyjxg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +25,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-22T02:29:52Z"
-    mac: ENC[AES256_GCM,data:oAvV/o5TymxSRLxW5vwJn0SK9wpdoJTwH9VDROOx49rqGbCfZjbLQi4zDvL5wVV6+TTYvwPgeW4ne/hAxXHAUMk/7DEi0XzGQzlU0IKymuLUKruerp8n8K+sagvfeZML8Ga5rK2UhafIPCMvVhzPXilhpAEXuHv0MnPActh89f8=,iv:6LCqflhlsnn160Db1iJQmmSSiJ9ociDfhccUzItld8Y=,tag:1OXp16tLhN6Zk0h1PtdReA==,type:str]
+    lastmodified: "2022-04-26T05:04:53Z"
+    mac: ENC[AES256_GCM,data:AYWeIL7FwRpLcY2Mn0nYURq0TMh0DJ3WvmBstTWSOBlUhLtSdxPu4LYFqvJUvShRmOoA2a1lUbYmL0HRt8vu5CK0ybno7td5a9ZtHWdzLLGeV2KwTcLJ2trml055wGyk7rTGuBP7wpUkYunTUVjuoDE1md7lUcAlimCQG2Dk1Vc=,iv:Np/nurWsAVjQ5XvdODaSEp+FcIkF0REgM0u7ah7iN8U=,tag:Sw/okQ1JaXiqX2LPaUyN6w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
