--- a/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -57,6 +57,8 @@ spec:
                   storage: 1Gi
     kube-state-metrics:
       fullnameOverride: kube-state-metrics
+    grafana:
+      enabled: false
     prometheus-node-exporter:
       fullnameOverride: node-exporter
       prometheus:
