--- a/cluster/core/monitoring/grafana/helm-release.yaml
+++ b/cluster/core/monitoring/grafana/helm-release.yaml
@@ -105,7 +105,7 @@ spec:
           - name: Prometheus
             type: prometheus
             access: proxy
-            url: http://prometheus:9090/
+            url: http://prometheus-prometheus:9090/
             isDefault: true
     grafana.ini:
       server:
