add block metrics

--- a/cluster/apps/networking/blocky/helm-release.yaml
+++ b/cluster/apps/networking/blocky/helm-release.yaml
@@ -43,6 +43,9 @@ spec:
 
     metrics:
       enabled: true
+      serviceMonitor:
+        interval: 30s
+        scrapeTimeout: 10s
       prometheusRule:
         enabled: true
 
