--- a/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -49,6 +49,13 @@ spec:
       config:
         global:
           resolve_timeout: 5m
+        route:
+          receiver: discord
+          routes:
+            - match:
+                alertname: Watchdog
+              receiver: 'null'
+            - receiver: discord
       ingress:
         enabled: true
         pathType: Prefix
