--- a/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -50,12 +50,29 @@ spec:
         global:
           resolve_timeout: 5m
         route:
+          group_by:
+            - alertname
+            - job
+          group_wait: 30s
+          group_interval: 5m
+          repeat_interval: 6h
           receiver: discord
           routes:
-            - match:
+            - receiver: "null"
+              match:
                 alertname: Watchdog
-              receiver: 'null'
             - receiver: discord
+              match_re:
+                severity: critical|warning
+              continue: true
+        inhibit_rules:
+          - source_match:
+              severity: critical
+            target_match:
+              severity: warning
+            equal:
+              - alertname
+              - namespace
       ingress:
         enabled: true
         pathType: Prefix
