test discord webhook

--- a/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/core/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -58,9 +58,9 @@ spec:
           repeat_interval: 6h
           receiver: discord
           routes:
-            - receiver: "null"
-              match:
-                alertname: Watchdog
+            # - receiver: "null"
+            #   match:
+            #     alertname: Watchdog
             - receiver: discord
               match_re:
                 severity: critical|warning
