--- a/cluster/apps/networking/blocky/helm-release.yaml
+++ b/cluster/apps/networking/blocky/helm-release.yaml
@@ -48,6 +48,9 @@ spec:
         scrapeTimeout: 10s
       prometheusRule:
         enabled: true
+    prometheus:
+      serviceMonitor:
+        enabled: true
 
     podAnnotations:
       configmap.reloader.stakater.com/reload: "blocky-config"
