--- a/cluster/apps/home/appdaemon/helm-release.yaml
+++ b/cluster/apps/home/appdaemon/helm-release.yaml
@@ -94,3 +94,6 @@ spec:
         volumeMounts:
           - name: config
             mountPath: /config
+    prometheus:
+      serviceMonitor:
+        enabled: true
