--- a/cluster/apps/media/radarr-4k/helm-release.yaml
+++ b/cluster/apps/media/radarr-4k/helm-release.yaml
@@ -54,3 +54,10 @@ spec:
         existingClaim: media-pv-claim
     podSecurityContext:
       fsGroup: ${FS_GROUP}
+    metrics:
+      enabled: true
+      prometheusRule:
+        enabled: true
+      exporter:
+        repository: ghcr.io/onedr0p/exportarr
+        tag: v1.0.0
