--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -60,6 +60,10 @@ spec:
 
     metrics:
       enabled: true
+      serviceMonitor:
+        bearerTokenSecret:
+          name: home-assistant-secrets
+          key: token
       prometheusRule:
         enabled: true
 
