--- a/cluster/core/monitoring/grafana/helm-release.yaml
+++ b/cluster/core/monitoring/grafana/helm-release.yaml
@@ -90,6 +90,9 @@ spec:
         flux-cluster:
           url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/cluster.json
           datasource: Prometheus
+        flux-control-plane:
+          url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/control-plane.json
+          datasource: Prometheus
         node-exporter-full:
           gnetId: 1860
           revision: 23
