--- a/cluster/core/longhorn-system/helm-release.yaml
+++ b/cluster/core/longhorn-system/helm-release.yaml
@@ -8,10 +8,12 @@ spec:
   chart:
     spec:
       chart: longhorn
+      version: 1.2.4
       sourceRef:
         kind: HelmRepository
         name: longhorn-charts
         namespace: flux-system
+      interval: 1m
   install:
     createNamespace: true
     remediation:
