--- a/cluster/core/longhorn-system/kustomization.yaml
+++ b/cluster/core/longhorn-system/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 namespace: longhorn-system
 resources:
   - helm-release.yaml
+  - prometheus-rules.yaml
+  - service-monitor.yaml
