--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -10,6 +10,7 @@ data:
   METALLB_TRAEFIK_ADDR: 192.168.1.221
   METALLB_UNIFI_ADDR: 192.168.1.222
   METALLB_BLOCKY_ADDR: 192.168.1.223
+  METALLB_QBITTORRENT_ADDR: 192.168.1.224
   NAS_ADDR: 192.168.1.128
   GATEWAY_IP: 192.168.1.1
   TZ: America/Vancouver
