--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -27,5 +27,6 @@ resources:
   - rook-ceph-charts.yaml
   - stakater-charts.yaml
   - traefik-charts.yaml
+  - vector-charts.yaml
   - weaveworks-kured-charts.yaml
   - zalando-postgres-ui-charts.yaml
