--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -42,6 +42,8 @@ spec:
         reject_old_samples_max_age: 168h
         ingestion_rate_mb: 16
         ingestion_burst_size_mb: 24
+        per_stream_rate_limit: 16MB
+        per_stream_rate_limit_burst: 24MB
       compactor:
         retention_enabled: true
       ruler:
