mess with labels

--- a/cluster/apps/monitoring/vector/aggregator/helm-release.yaml
+++ b/cluster/apps/monitoring/vector/aggregator/helm-release.yaml
@@ -86,11 +86,11 @@ spec:
             pod_nameCustom: >-
               {{`{{ pod_name }}`}}
             namespaceCustom: >-
-              {{ kubernetes.pod_namespace }}
+              {{`{{ kubernetes.pod_namespace }}`}}
             nodeCustom: >-
-              {{ kubernetes.pod_node_name }}
+              {{`{{ kubernetes.pod_node_name }}`}}
             podCustom: >-
-              {{ kubernetes.pod_name }}
+              {{`{{ kubernetes.pod_name }}`}}
         prometheus_sink:
           type: prometheus_exporter
           inputs:
